20 November 2024: Yorgos
	- Fix comparison to help static analyzer.

19 November 2024: Yorgos
	- Merge #1169 from Sergey Kacheev, fix: lock-free counters for
	  auth_zone up/down queries.

15 November 2024: Wouter
	- Fix #1183: the data being used is released in method
	  nsec3_hash_test_entry.
	- Fix for #1183: release nsec3 hashes per test file.

8 November 2024: Yorgos
	- More descriptive text for 'harden-algo-downgrade'.
	- Complete fix for max-global-quota to 200.

6 November 2024: Yorgos
	- Increase the default of max-global-quota to 200 from 128 after
	  operational feedback. Still keeping the possible amplification
	  factor (CAMP related issues) in the hundreds.

5 November 2024: Wouter
	- Fix for the serve expired DNSSEC information fix, it would not allow
	  current delegation information be updated in cache. The fix allows
	  current delegation and validation recursion information to be
	  updated, but as a consequence no longer has certain expired
	  information around for later dnssec valid expired responses.
	- Fix to log redis timeout error string on failure.

5 November 2024: Yorgos
	- Fix SETEX check during Redis (re)initialization.

4 November 2024: Wouter
	- Fix redis that during a reload it does not fail if the redis
	  server does not connect or does not respond. It still logs the
	  errors and if the server is up checks expiration features.
	- Merge #1167: Makefile.in: fix occasional parallel build failures
	  around bison rule.

1 November 2024: Yorgos
	- Merge #1159: Stats for discard-timeout and wait-limit.
	- Add test case for #1159.
	- Some clean up for stat_values.test.
	- Merge #1170 from Melroy van den Berg, Fix chroot manpage
	  description.
	- Merge #1157 from Liang Zhu, Fix heap corruption when calling
	  ub_ctx_delete in Windows.

25 October 2024: Yorgos
	- Fix #1163: Typos in unbound.conf documentation.

17 October 2024: Wouter
	- Tag for 1.22.0 release. This did not contain the 1154 fix